force-app/main/default/objects/Incident_Report__c/Incident_Report__c.object-meta.xml
<CustomObject>
    <label>Event Record</label>
    <nameField>
        <displayFormat>IR-{0000}</displayFormat>
        <label>Event Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>