force-app/main/default/objects/Incident_Report__c/fields/Academy__c.field-meta.xml
<CustomField>
    <fullName>Academy__c</fullName>
    <label>Higher Education</label>
    <length>255</length>
    <type>Text</type>
</CustomField>