force-app/main/default/objects/Incident_Report__c/fields/Acc_Addressing_Email__c.field-meta.xml
<CustomField>
    <fullName>Acc_Addressing_Email__c</fullName>
    <label>The Applicant&apos;s Mail</label>
    <type>Email</type>
</CustomField>