force-app/main/default/objects/Incident_Report__c/fields/Access_to_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Access_to_Bank_Account__c</fullName>
    <label>Someone Else With Account Access</label>
    <length>255</length>
    <type>Text</type>
</CustomField>