force-app/main/default/objects/Incident_Report__c/fields/Account_Addressing__c.field-meta.xml
<CustomField>
    <fullName>Account_Addressing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name Of Applicant</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Incident_Report</relationshipName>
    <type>Lookup</type>
</CustomField>