force-app/main/default/objects/Incident_Report__c/fields/Additional_Nationalities__c.field-meta.xml
<CustomField>
    <fullName>Additional_Nationalities__c</fullName>
    <label>Additional Nationalities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>