force-app/main/default/objects/Incident_Report__c/fields/Additional_Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Additional_Passport_Number__c</fullName>
    <label>Additional Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>