force-app/main/default/objects/Incident_Report__c/fields/Additional_Sources_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Sources_Information__c</fullName>
    <label>Additional Information From Other Source</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>