force-app/main/default/objects/Incident_Report__c/fields/Altitude__c.field-meta.xml
<CustomField>
    <fullName>Altitude__c</fullName>
    <label>Altitude</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>