force-app/main/default/objects/Incident_Report__c/fields/Asker_Address__c.field-meta.xml
<CustomField>
    <fullName>Asker_Address__c</fullName>
    <label>Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>