force-app/main/default/objects/Incident_Report__c/fields/Backpack__c.field-meta.xml
<CustomField>
    <fullName>Backpack__c</fullName>
    <label>Backpack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>