force-app/main/default/objects/Incident_Report__c/fields/Bank_Branch__c.field-meta.xml
<CustomField>
    <fullName>Bank_Branch__c</fullName>
    <label>Bank Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>