force-app/main/default/objects/Incident_Report__c/fields/Bank_Last_Action__c.field-meta.xml
<CustomField>
    <fullName>Bank_Last_Action__c</fullName>
    <label>Last Bank Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>