force-app/main/default/objects/Incident_Report__c/fields/Beard__c.field-meta.xml
<CustomField>
    <fullName>Beard__c</fullName>
    <label>Beard</label>
    <length>255</length>
    <type>Text</type>
</CustomField>