force-app/main/default/objects/Incident_Report__c/fields/Birth_Place__c.field-meta.xml
<CustomField>
    <fullName>Birth_Place__c</fullName>
    <label>Place Of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>