force-app/main/default/objects/Incident_Report__c/fields/Camera__c.field-meta.xml
<CustomField>
    <fullName>Camera__c</fullName>
    <label>Camera</label>
    <length>255</length>
    <type>Text</type>
</CustomField>