force-app/main/default/objects/Incident_Report__c/fields/Card_Device_IMEI__c.field-meta.xml
<CustomField>
    <fullName>Card_Device_IMEI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מכשיר לוויני IMEI</label>
    <referenceTo>Card_Device__c</referenceTo>
    <relationshipLabel>Event Records (מכשיר לוויני IMEI)</relationshipLabel>
    <relationshipName>Event_Records</relationshipName>
    <type>Lookup</type>
</CustomField>