force-app/main/default/objects/Incident_Report__c/fields/Cell_Reception__c.field-meta.xml
<CustomField>
    <fullName>Cell_Reception__c</fullName>
    <label>Call Reception</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>