force-app/main/default/objects/Incident_Report__c/fields/Cell_Type__c.field-meta.xml
<CustomField>
    <fullName>Cell_Type__c</fullName>
    <label>Cell Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>