force-app/main/default/objects/Incident_Report__c/fields/Cellphone_Company__c.field-meta.xml
<CustomField>
    <fullName>Cellphone_Company__c</fullName>
    <label>Cellphone Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>