force-app/main/default/objects/Incident_Report__c/fields/Cellular_Device__c.field-meta.xml
<CustomField>
    <fullName>Cellular_Device__c</fullName>
    <label>Cellular Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>