force-app/main/default/objects/Incident_Report__c/fields/Close_Event__c.field-meta.xml
<CustomField>
    <fullName>Close_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Event</label>
    <type>Checkbox</type>
</CustomField>