force-app/main/default/objects/Incident_Report__c/fields/Closed_Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Closed_Event_Notes__c</fullName>
    <label>Closed Event Notes</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>