force-app/main/default/objects/Incident_Report__c/fields/Closed_Event_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Event_Reason__c</fullName>
    <label>Closed Event Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOS Wrongfully Triggered</fullName>
            </value>
            <value>
                <fullName>Located</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Referred to the relevant Insurance Company</fullName>
            </value>
            <value>
                <fullName>Referred to the Medical Center</fullName>
            </value>
            <value>
                <fullName>Rescued</fullName>
            </value>
            <value>
                <fullName>Rescued By Other Entity</fullName>
            </value>
            <value>
                <fullName>Alerts were sent in all channels &amp; tracker activated - connection established</fullName>
            </value>
            <value>
                <fullName>Operated without our ass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>