force-app/main/default/objects/Incident_Report__c/fields/Clothes_Description__c.field-meta.xml
<CustomField>
    <fullName>Clothes_Description__c</fullName>
    <label>Clothing Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>