force-app/main/default/objects/Incident_Report__c/fields/Clothes_signals__c.field-meta.xml
<CustomField>
    <fullName>Clothes_signals__c</fullName>
    <label>Clothing Identifying Marks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>