force-app/main/default/objects/Incident_Report__c/fields/Coat__c.field-meta.xml
<CustomField>
    <fullName>Coat__c</fullName>
    <label>Coat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>