force-app/main/default/objects/Incident_Report__c/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Without</fullName>
            </value>
            <value>
                <fullName>MAGNUS Device</fullName>
            </value>
            <value>
                <fullName>Rescue1 Device</fullName>
            </value>
            <value>
                <fullName>Nova Device</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Olam Katan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>