force-app/main/default/objects/Incident_Report__c/fields/Countries__c.field-meta.xml
<CustomField>
    <fullName>Countries__c</fullName>
    <label>Countries</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_In_The_World</valueSetName>
    </valueSet>
</CustomField>