force-app/main/default/objects/Incident_Report__c/fields/CreditCard_Last_Digits__c.field-meta.xml
<CustomField>
    <fullName>CreditCard_Last_Digits__c</fullName>
    <label>Credit Card Last Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>