force-app/main/default/objects/Incident_Report__c/fields/Current_address__c.field-meta.xml
<CustomField>
    <fullName>Current_address__c</fullName>
    <label>Current Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>