force-app/main/default/objects/Incident_Report__c/fields/Dangerous_Points__c.field-meta.xml
<CustomField>
    <fullName>Dangerous_Points__c</fullName>
    <label>Dangerous Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>