force-app/main/default/objects/Incident_Report__c/fields/Date_Of_Application__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Application__c</fullName>
    <label>Date Of Application</label>
    <type>Date</type>
</CustomField>