force-app/main/default/objects/Incident_Report__c/fields/Datum_Point__c.field-meta.xml
<CustomField>
    <fullName>Datum_Point__c</fullName>
    <label>Relevant Coordinates</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>