force-app/main/default/objects/Incident_Report__c/fields/DealCard_Satellite__c.field-meta.xml
<CustomField>
    <fullName>DealCard_Satellite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס עסקה - לקוח לוויני</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>Event Records</relationshipLabel>
    <relationshipName>Event_Records</relationshipName>
    <type>Lookup</type>
</CustomField>