force-app/main/default/objects/Incident_Report__c/fields/Drug_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Drug_Abuse__c</fullName>
    <label>Drug Abuse</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>