force-app/main/default/objects/Incident_Report__c/fields/ECC_ID__c.field-meta.xml
<CustomField>
    <fullName>ECC_ID__c</fullName>
    <description>ID number as shown in the ECC system</description>
    <label>ECC ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>