force-app/main/default/objects/Incident_Report__c/fields/Estimated_Non_Medical_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Non_Medical_Expenses__c</fullName>
    <label>Estimated Non-Medical Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>