force-app/main/default/objects/Incident_Report__c/fields/Event_close_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_close_Time__c</fullName>
    <label>Event Closing Time</label>
    <type>DateTime</type>
</CustomField>