force-app/main/default/objects/Incident_Report__c/fields/Event_Content__c.field-meta.xml
<CustomField>
    <fullName>Event_Content__c</fullName>
    <label>Event Content</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Rescue</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Mental</fullName>
            </value>
            <value>
                <fullName>Emergency</fullName>
            </value>
            <value>
                <fullName>Medical Consultation</fullName>
            </value>
            <value>
                <fullName>Professional Consultation</fullName>
            </value>
            <value>
                <fullName>Medical Transportation</fullName>
            </value>
            <value>
                <fullName>חילוץ רכוב</fullName>
                <isActive>false</isActive>
                <label>חילוץ רכוב</label>
            </value>
            <value>
                <fullName>מיוחד</fullName>
                <isActive>false</isActive>
                <label>מיוחד</label>
            </value>
            <value>
                <fullName>עד הקצה</fullName>
                <isActive>false</isActive>
                <label>עד הקצה</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>