force-app/main/default/objects/Incident_Report__c/fields/Event_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Open_Date__c</fullName>
    <label>Event Opening Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>