force-app/main/default/objects/Incident_Report__c/fields/Event_Open_time__c.field-meta.xml
<CustomField>
    <fullName>Event_Open_time__c</fullName>
    <description>old formula:
IF (
isblank(Closed_Date__c),
TODAY() - DATEVALUE(CreatedDate),
Closed_Date__c - DATEVALUE(CreatedDate)
)</description>
    <formula>IF ( 
isblank(Event_close_Time__c), 
((NOW() - Event_Open_Date__c))*24, 
((Event_close_Time__c - Event_Open_Date__c) )*24
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Duration In Hours</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>