force-app/main/default/objects/Incident_Report__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOS</fullName>
            </value>
            <value>
                <fullName>The Applicant</fullName>
            </value>
            <value>
                <fullName>A Friend</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
            <value>
                <fullName>Family of Satellite Customer</fullName>
            </value>
            <value>
                <fullName>Family of Insured Customer</fullName>
            </value>
            <value>
                <fullName>MAGNUS safety</fullName>
            </value>
            <value>
                <fullName>SPL</fullName>
            </value>
            <value>
                <fullName>Local Contact</fullName>
            </value>
            <value>
                <fullName>אפליקציית מגנוס</fullName>
                <isActive>false</isActive>
                <label>אפליקציית מגנוס</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>