force-app/main/default/objects/Incident_Report__c/fields/Event_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Days__c</fullName>
    <formula>IF (
isblank(Event_close_Time__c),
((NOW() - Event_Open_Date__c)),
((Event_close_Time__c - Event_Open_Date__c) )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Of Event In Days</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>