force-app/main/default/objects/Incident_Report__c/fields/Eyecolor__c.field-meta.xml
<CustomField>
    <fullName>Eyecolor__c</fullName>
    <label>Eyecolor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>