force-app/main/default/objects/Incident_Report__c/fields/Facebook_Account__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Account__c</fullName>
    <label>Facebook Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>