force-app/main/default/objects/Incident_Report__c/fields/Family_Status__c.field-meta.xml
<CustomField>
    <fullName>Family_Status__c</fullName>
    <label>Family Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>