force-app/main/default/objects/Incident_Report__c/fields/Family_Update__c.field-meta.xml
<CustomField>
    <fullName>Family_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Update</label>
    <type>Checkbox</type>
</CustomField>