force-app/main/default/objects/Incident_Report__c/fields/Favorite_Sites__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Sites__c</fullName>
    <label>Favorite Sites</label>
    <length>255</length>
    <type>Text</type>
</CustomField>