force-app/main/default/objects/Incident_Report__c/fields/Final_Profit__c.field-meta.xml
<CustomField>
    <fullName>Final_Profit__c</fullName>
    <formula>Total_Income__c - Total_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>