force-app/main/default/objects/Incident_Report__c/fields/Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Free_Text__c</fullName>
    <label>Free Text</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>