force-app/main/default/objects/Incident_Report__c/fields/Gear__c.field-meta.xml
<CustomField>
    <fullName>Gear__c</fullName>
    <label>Treck Gear</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>