force-app/main/default/objects/Incident_Report__c/fields/Glasses__c.field-meta.xml
<CustomField>
    <fullName>Glasses__c</fullName>
    <label>Glasses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>