force-app/main/default/objects/Incident_Report__c/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <label>GPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>