force-app/main/default/objects/Incident_Report__c/fields/Health_Condition__c.field-meta.xml
<CustomField>
    <fullName>Health_Condition__c</fullName>
    <label>Health Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
            </value>
            <value>
                <fullName>Sick</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>