force-app/main/default/objects/Incident_Report__c/fields/Health_Problems__c.field-meta.xml
<CustomField>
    <fullName>Health_Problems__c</fullName>
    <label>Currant And Past Health Problems</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>