force-app/main/default/objects/Incident_Report__c/fields/Highschool__c.field-meta.xml
<CustomField>
    <fullName>Highschool__c</fullName>
    <label>Highschool</label>
    <length>255</length>
    <type>Text</type>
</CustomField>