force-app/main/default/objects/Incident_Report__c/fields/Illness_History__c.field-meta.xml
<CustomField>
    <fullName>Illness_History__c</fullName>
    <label>Disease History</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>