force-app/main/default/objects/Incident_Report__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <formula>Total_Income__c&gt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Income</label>
    <type>Checkbox</type>
</CustomField>