force-app/main/default/objects/Incident_Report__c/fields/Instagram_Account__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Account__c</fullName>
    <label>Instagram Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>