force-app/main/default/objects/Incident_Report__c/fields/Insurance_Company_picklist__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_picklist__c</fullName>
    <label>Insurance Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Migdal</fullName>
            </value>
            <value>
                <fullName>Phoenix</fullName>
            </value>
            <value>
                <fullName>AIG</fullName>
            </value>
            <value>
                <fullName>Bituach Yashir</fullName>
            </value>
            <value>
                <fullName>PassportCard</fullName>
            </value>
            <value>
                <fullName>Harel</fullName>
            </value>
            <value>
                <fullName>Clal</fullName>
            </value>
            <value>
                <fullName>Shirbit</fullName>
            </value>
            <value>
                <fullName>Menora</fullName>
            </value>
            <value>
                <fullName>Hachshara</fullName>
            </value>
            <value>
                <fullName>Private Sector</fullName>
            </value>
            <value>
                <fullName>טרם נקבע</fullName>
                <isActive>false</isActive>
                <label>טרם נקבע</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>