force-app/main/default/objects/Incident_Report__c/fields/Insurance_Company_Update__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Company Update</label>
    <type>Checkbox</type>
</CustomField>