force-app/main/default/objects/Incident_Report__c/fields/Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Policy__c</fullName>
    <label>Insurance Policy</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>