force-app/main/default/objects/Incident_Report__c/fields/Insured_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Insured_Relationship__c</fullName>
    <label>Type Of Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>