force-app/main/default/objects/Incident_Report__c/fields/Jewelry__c.field-meta.xml
<CustomField>
    <fullName>Jewelry__c</fullName>
    <label>Jewelry/ Watch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>