force-app/main/default/objects/Incident_Report__c/fields/Limp__c.field-meta.xml
<CustomField>
    <fullName>Limp__c</fullName>
    <label>Limp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>