force-app/main/default/objects/Incident_Report__c/fields/LinkedIn_Account__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Account__c</fullName>
    <label>Linkedin Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>