force-app/main/default/objects/Incident_Report__c/fields/Local_Sim__c.field-meta.xml
<CustomField>
    <fullName>Local_Sim__c</fullName>
    <label>Local Sim</label>
    <type>Phone</type>
</CustomField>