force-app/main/default/objects/Incident_Report__c/fields/Local_Teams_Update__c.field-meta.xml
<CustomField>
    <fullName>Local_Teams_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Teams Update</label>
    <type>Checkbox</type>
</CustomField>