force-app/main/default/objects/Incident_Report__c/fields/Magnus_Team_Update__c.field-meta.xml
<CustomField>
    <fullName>Magnus_Team_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Magnus Team Update</label>
    <type>Checkbox</type>
</CustomField>