force-app/main/default/objects/Incident_Report__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <label>Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>