force-app/main/default/objects/Incident_Report__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medication</label>
    <type>Checkbox</type>
</CustomField>