force-app/main/default/objects/Incident_Report__c/fields/Medication_Description__c.field-meta.xml
<CustomField>
    <fullName>Medication_Description__c</fullName>
    <label>Medication Description</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>