force-app/main/default/objects/Incident_Report__c/fields/Mental_Condition__c.field-meta.xml
<CustomField>
    <fullName>Mental_Condition__c</fullName>
    <label>Mental Health</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>