force-app/main/default/objects/Incident_Report__c/fields/Military_Service__c.field-meta.xml
<CustomField>
    <fullName>Military_Service__c</fullName>
    <label>Military Service/ National Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>