force-app/main/default/objects/Incident_Report__c/fields/Ministry_of_Foreign_Affairs__c.field-meta.xml
<CustomField>
    <fullName>Ministry_of_Foreign_Affairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ministry Of Foreign Affairs</label>
    <type>Checkbox</type>
</CustomField>