force-app/main/default/objects/Incident_Report__c/fields/Moustache__c.field-meta.xml
<CustomField>
    <fullName>Moustache__c</fullName>
    <label>Mustache</label>
    <length>255</length>
    <type>Text</type>
</CustomField>