force-app/main/default/objects/Incident_Report__c/fields/Online_Registration_Form_link__c.field-meta.xml
<CustomField>
    <fullName>Online_Registration_Form_link__c</fullName>
    <formula>&quot;https://magnus.secure.force.com/AssemblyDesk?id=&quot;+Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Online Registration Form Link</label>
    <type>Text</type>
</CustomField>