force-app/main/default/objects/Incident_Report__c/fields/Other_Countries_Traveled__c.field-meta.xml
<CustomField>
    <fullName>Other_Countries_Traveled__c</fullName>
    <label>Other Countries Traveled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>