force-app/main/default/objects/Incident_Report__c/fields/Other_Signs__c.field-meta.xml
<CustomField>
    <fullName>Other_Signs__c</fullName>
    <label>Other Signs</label>
    <type>TextArea</type>
</CustomField>