force-app/main/default/objects/Incident_Report__c/fields/Package_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Package_Purchased__c</fullName>
    <label>Service Package Purchased</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>