force-app/main/default/objects/Incident_Report__c/fields/Pants__c.field-meta.xml
<CustomField>
    <fullName>Pants__c</fullName>
    <label>Pants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>