force-app/main/default/objects/Incident_Report__c/fields/Pouch__c.field-meta.xml
<CustomField>
    <fullName>Pouch__c</fullName>
    <label>Pouch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>