force-app/main/default/objects/Incident_Report__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <length>255</length>
    <type>Text</type>
</CustomField>