force-app/main/default/objects/Incident_Report__c/fields/Relevant_Trek_Information__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Trek_Information__c</fullName>
    <label>Relevant Trek Information</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>