force-app/main/default/objects/Incident_Report__c/fields/Rescued_Condition__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Condition__c</fullName>
    <label>Assistance Requested:</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>