force-app/main/default/objects/Incident_Report__c/fields/Rescued_Last_Contact__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Last_Contact__c</fullName>
    <label>Rescued Clients Last Contact</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>