force-app/main/default/objects/Incident_Report__c/fields/Rescued_Location__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Location__c</fullName>
    <label>Incident Location</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>