force-app/main/default/objects/Incident_Report__c/fields/Rescued_Name__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member&apos;s Full Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Incident_Report1</relationshipName>
    <type>Lookup</type>
</CustomField>