force-app/main/default/objects/Incident_Report__c/fields/Rescued_Phone__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Phone__c</fullName>
    <formula>Rescued_Name__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member&apos;s Phone Number</label>
    <type>Text</type>
</CustomField>