force-app/main/default/objects/Incident_Report__c/fields/Rescued_Phone_Text__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Phone_Text__c</fullName>
    <label>Rescued Client Phone Number</label>
    <type>Phone</type>
</CustomField>