force-app/main/default/objects/Incident_Report__c/fields/Rescued_Situation__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Situation__c</fullName>
    <label>Actions To Be Taken</label>
    <length>40000</length>
    <type>LongTextArea</type>
</CustomField>