force-app/main/default/objects/Incident_Report__c/fields/Rescued_Update__c.field-meta.xml
<CustomField>
    <fullName>Rescued_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update From Rescued Client</label>
    <type>Checkbox</type>
</CustomField>