force-app/main/default/objects/Incident_Report__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>