force-app/main/default/objects/Incident_Report__c/fields/Satellite_Company__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Company__c</fullName>
    <label>Satellite Device Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>