force-app/main/default/objects/Incident_Report__c/fields/Satellite_Phone__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satellite Device</label>
    <type>Checkbox</type>
</CustomField>